# cimod

./: '  .coveragerc  .gitattribute  .gitignore  .reviewdog.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  MANIFEST.in  README.md  a.out  bench.py  build-requirements.in  ci-requirement.in  codecov.yml  dev-requirement.in  dev-requirements.in  dev-requirements.txt  doc-requirements.in  format-requirement.in  format-requirements.in  format-requirements.txt  pyproject.toml  requirements.in  setup.cfg  setup.py
.github/: dependabot.yml
cimod/: CMakeLists.txt  __init__.py  __version.py  _version.py  binary_quadratic_model.py  impl.hpp  main.cpp  main.hpp  vartype.py
cimod/model/: __init__.py  binary_polynomial_model.py  binary_quadratic_model.py
cimod/model/legacy/: __init__.py  binary_quadratic_model.py
cimod/utils/: __init__.py  decolator.py  response.py
cmake/: FindLcov.cmake  GenerateDocs.cmake
docs/: CNAME  ____init_____8py.html  ____init_____8py.js  _config.yml  _toc.yml  annotated.html  annotated_dup.js  binary__polynomial__model_8hpp.html  binary__polynomial__model_8hpp__dep__incl.map  binary__polynomial__model_8hpp__dep__incl.md5  binary__polynomial__model_8hpp__incl.map  binary__polynomial__model_8hpp__incl.md5  binary__polynomial__model_8hpp_source.html  binary__polynomial__model_8py.html  binary__polynomial__model_8py.js  binary__quadratic__model_8hpp.html  binary__quadratic__model_8hpp.js  binary__quadratic__model_8hpp__dep__incl.map  binary__quadratic__model_8hpp__dep__incl.md5  binary__quadratic__model_8hpp__incl.map  binary__quadratic__model_8hpp__incl.md5  binary__quadratic__model_8hpp_source.html  binary__quadratic__model_8py.html  binary__quadratic__model_8py.js  binary__quadratic__model__dict_8hpp.html  binary__quadratic__model__dict_8hpp__dep__incl.map  binary__quadratic__model__dict_8hpp__dep__incl.md5  binary__quadratic__model__dict_8hpp__incl.map  binary__quadratic__model__dict_8hpp__incl.md5  binary__quadratic__model__dict_8hpp_source.html  classcimod_1_1BinaryPolynomialModel-members.html  classcimod_1_1BinaryPolynomialModel.html  classcimod_1_1BinaryPolynomialModel.js  classcimod_1_1BinaryPolynomialModel_a00c26e7f9563c022b5f9314439b6d4bd_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a012f06aa26ed014d0a46af6306cdae77_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a03cc8349130783e6a7270e0cf29946a6_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a0b557e88c14857585d9242279467880b_cgraph.map  classcimod_1_1BinaryPolynomialModel_a0b557e88c14857585d9242279467880b_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a137c52dc5b23b123c5ea088c70daa60c_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a1b8e91973c1dc771f1fb4b2d52b32d5b_cgraph.md5  (+468 more)
example/: example.cpp
html/: binary__polynomial__model_8hpp.html  binary__polynomial__model_8hpp.js  binary__polynomial__model_8hpp__incl.map  binary__polynomial__model_8hpp_source.html  binary__quadratic__model_8hpp.html  binary__quadratic__model_8hpp__dep__incl.md5  binary__quadratic__model_8hpp__incl.map  binary__quadratic__model__dict_8hpp.html  binary__quadratic__model__dict_8hpp_source.html  classcimod_1_1BinaryPolynomialModel-members.html  classcimod_1_1BinaryPolynomialModel.js  classcimod_1_1BinaryPolynomialModel_a012f06aa26ed014d0a46af6306cdae77_cgraph.map  classcimod_1_1BinaryPolynomialModel_a03cc8349130783e6a7270e0cf29946a6_cgraph.map  classcimod_1_1BinaryPolynomialModel_a03cc8349130783e6a7270e0cf29946a6_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a137c52dc5b23b123c5ea088c70daa60c_cgraph.map  classcimod_1_1BinaryPolynomialModel_a1b8e91973c1dc771f1fb4b2d52b32d5b_cgraph.map  classcimod_1_1BinaryPolynomialModel_a2abb34f442d51120b1996dc42fe12344_icgraph.map  classcimod_1_1BinaryPolynomialModel_a2cd7c9b82010d48398bb625fa618e682_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a44c47a1e664a8e7d4348ca0d50e15126_cgraph.map  classcimod_1_1BinaryPolynomialModel_a486b88bab15cdc0d5d82326dd0c460ad_cgraph.map  classcimod_1_1BinaryPolynomialModel_a486b88bab15cdc0d5d82326dd0c460ad_icgraph.map  classcimod_1_1BinaryPolynomialModel_a4b8257b55b7a0045b4bdabb8ac39facd_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a4ea0e10d21aeb264d3b17c3814131670_cgraph.map  classcimod_1_1BinaryPolynomialModel_a5171233413be90f2f1b7295fa209ff08_icgraph.map  classcimod_1_1BinaryPolynomialModel_a56aeb16ad506bd134331c64040060110_cgraph.map  classcimod_1_1BinaryPolynomialModel_a61cf0535f9f01cea4d975cec1e685c56_cgraph.map  classcimod_1_1BinaryPolynomialModel_a61cf0535f9f01cea4d975cec1e685c56_cgraph.md5  classcimod_1_1BinaryPolynomialModel_a71cc21d6b4d98d8ca90f684766a0ba47_icgraph.md5  classcimod_1_1BinaryPolynomialModel_a7427fb3d2bc707a31b7de468e2438ca9_icgraph.map  classcimod_1_1BinaryPolynomialModel_a7427fb3d2bc707a31b7de468e2438ca9_icgraph.md5  classcimod_1_1BinaryPolynomialModel_a79f37716ea17317a9cc609b71b5079fa_icgraph.md5  classcimod_1_1BinaryPolynomialModel_a899fb2ead089c0e7a937a34536c86289_cgraph.map  classcimod_1_1BinaryPolynomialModel_a8d319a0a89e250e3e450bd7b054f376f_icgraph.map  classcimod_1_1BinaryPolynomialModel_a95fe13ce6e2dd9c0cfedb53aa862c82b_cgraph.map  classcimod_1_1BinaryPolynomialModel_aa3c41f812d024b2d70182611e28a5e6b_cgraph.map  classcimod_1_1BinaryPolynomialModel_aa3c41f812d024b2d70182611e28a5e6b_cgraph.md5  classcimod_1_1BinaryPolynomialModel_aad5b50bd2cf6c692b76d58399dbf4ca8_cgraph.map  (+132 more)
include/: CMakeLists.txt
include/cimod/: binary_polynomial_model.hpp  binary_quadratic_model.hpp  binary_quadratic_model_dict.hpp  disable_eigen_warning.hpp  hash.hpp  json.hpp  utilities.hpp  vartypes.hpp
jij_cimod/: CMakeLists.txt  __init__.py  main.cpp
notebooks/: Untitled-Copy1.ipynb  Untitled.ipynb  (+1 more)
src/: CMakeLists.txt  binary_polynomial_model.hpp  binary_polynomial_model_variant.hpp  binary_quadratic_model.hpp  binary_quadratic_model_dense.hpp  binary_quadratic_model_dict.hpp  disable_eigen_warning.hpp  hash.hpp  json.hpp  utilities.hpp  vartypes.hpp
tests/: CMakeLists.txt  __init__.py  basic_test.py  test.cpp  test_0_basic.py  test_basic.py  test_bqm.hpp  test_legacy_model.py  test_legacy_model.py-  test_model.py
(+457 files in other folders)
