[install_lib]
optimize = 1
compile = 1

[aliases]
test=pytest

[metadata]
url = https://www.openjij.org
author = Jij Inc.
author_email = info@j-ij.com
description = C++ library for a binary (and polynomial) quadratic model.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Documentation=https://openjij.github.io/cimod/html/index.html
  

[options]
python_requires = >=3.7, <3.11
install_requires =
    typing-extensions; python_version < '3.8'
    numpy >= 1.21.2
    dimod >= 0.9.1, <0.12.0
    scipy
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-html
    pytest-runner
    pytest-randomly
    pytest-clarity
    pytest-spec
    coverage
