# Copyright 2025 Jij Inc.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[install_lib]
optimize = 1
compile = 1

[aliases]

[metadata]
name=jij_cimod
url = https://www.openjij.org
author = Jij Inc.
author_email = info@openjij.org
description = C++ library for a binary (and polynomial) quadratic model.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Source=https://github.com/OpenJij/cimod
    Documentation=http://openjij.github.io/Cimod-Documentation/
    PythonDocumentation=https://openjij.github.io/cimod/
  

[options]
python_requires = >=3.9, <3.14
install_requires =
    numpy >= 1.19.3, < 2.4
    scipy >= 1.5.4, < 1.16
    dimod >= 0.9.11, < 0.13
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-randomly
    pytest-spec
    coverage
